--- a/src/app.html
+++ b/src/app.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+  <script>
+		/**
+		 * this is a hack for error: global is not defined
+		 */
+		var global = global || window
+	</script>
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
